# BR2

./: .gitignore  .~lock.Roadmap.odt#  BR2.sln  BR2.vcxproj  BR2.vcxproj.filters  Bottle.vcxproj  Bottle.vcxproj.filters  CMakeLists.txt  MLTest.vcxproj  MLTest.vcxproj.filters  Makefile  README.md  Roadmap.odt  bottle.sln  bottle.vcxproj  bottle.vcxproj.filters  cmake.sh  cmake_install.cmake  core.vcxproj  core.vcxproj.filters  design.txt  designnotes.md  devlog.txt  notes.md  shake.sln  shake.vcxproj  shake.vcxproj.filters
build/: Makefile  cmake_install.cmake
data/cache/: CongaLog.txt
enc_temp_folder/ff6b30afe32ff2544851e5133323183d/: PhysicsNode.cpp
etc/: cutcode.txt
nanogui_bin/: nanogui_sdl_x64d.exp  nanogui_sdl_x64d.lib
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
project/: Game_Design.docx  cutcode.txt  design.md  designnotes.md  devlog.md  devlog.txt  new_ui_notes.txt  tasks.md  vs2019.vssettings  ~$me_Design.docx
src/: BottleRoom.cpp  BottleRoom.h  GameUi.h  PhysicsHeader.h
src/app/: AppBase.cpp  AppBase.h  AppHeader.h  AppMain.cpp  AppMain.h  GraphicsWindow.cpp  GraphicsWindow.h  Main.cpp  OpenGLWindow.cpp  OpenGLWindow.h  ProjectFile.cpp  ProjectFile.h  Script.cpp  Script.h  VulkanWindow.cpp  VulkanWindow.h  WindowManager.cpp  WindowManager.h
src/base/: Allocator.cpp  Allocator.h  AppBase.cpp  AppBase.h  AppHeader.h  AppMain.cpp  AppMain.h  AppRunner.cpp  AppRunner.h  ApplicationPackage.cpp  ApplicationPackage.h  BPUtil.cpp  BPUtil.h  Base.h  BaseAll.h  BaseBase.h  BaseDataFile.cpp  BaseDataFile.h  BaseDefines.h  BaseHeader.cpp  BaseHeader.h  BinaryFile.cpp  BinaryFile.h  BufParser.cpp  BufParser.h  BufParserHeader.h  BufferedFile.cpp  BufferedFile.h  BuildConfig.h  CSharp.h  CSharpCompiler.cpp  CSharpCompiler.h  CSharpScript.cpp  CSharpScript.h  Component.cpp  Component.h  ConsoleColors.h  CoreHeader.h  Crc32.cpp  Crc32.h  (+136 more)
src/bottle/: BlockNode.cpp  BlockNode.h  BottleHeader.h  BottleRoom.cpp  BottleRoom.h  BottleScript.cpp  BottleScript.h  BottleUtils.cpp  BottleUtils.h  BottleWorld.cpp  Brain25.cpp  Brain25.h  GameFile.cpp  GameFile.h  GameUi.cpp  GameUi.h  Goal25.cpp  Goal25.h  Goal25MoveTo.cpp  Goal25MoveTo.h  Goal25Think.cpp  Goal25Think.h  GodCam.cpp  GodCam.h  GodCamScript.cpp  GodCamScript.h  Lair.cpp  Lair.h  ObFile.cpp  ObFile.h  RTSCamScript.cpp  RTSCamScript.h  SpriteBucket.cpp  SpriteBucket.h  Tile25Spec.cpp  Tile25Spec.h  W25Config.cpp  W25Config.h  W25GridMesh.cpp  W25GridMesh.h  (+25 more)
src/cmake_test_src/: cmake_test.cpp
src/display/: Atlas.cpp  Atlas.h  CameraNode.cpp  CameraNode.h  DeferredFramebuffer.cpp  DeferredFramebuffer.h  DisplayHeader.h  FlyCam.cpp  FlyCam.h  FontTextBuffer.cpp  FontTextBuffer.h  ForwardFramebuffer.cpp  ForwardFramebuffer.h  FramebufferBase.cpp  FramebufferBase.h  FrustumBase.cpp  FrustumBase.h  FrustumProjectionParameters.h  Gd.cpp  Gd.h  GpuComputeSync.cpp  GpuComputeSync.h  GpuQuad3.cpp  GpuQuad3.h  GraphicsApi.cpp  GraphicsApi.h  Gui2d.h  HappySky.cpp  HappySky.h  LightManager.cpp  LightManager.h  LightNode.cpp  LightNode.h  MegaTex.cpp  MegaTex.h  OpenGLApi.cpp  OpenGLApi.h  Particles.h  Party.cpp  Party.h  (+52 more)
src/ext/: lodepng.cpp  stb_truetype-old.h  stb_truetype.h  stb_vorbis.c
src/gfx/: Atlas.cpp  Atlas.h  BufferRenderTarget.cpp  BufferRenderTarget.h  CameraNode.cpp  CameraNode.h  DeferredFramebuffer.cpp  DeferredFramebuffer.h  DisplayHeader.h  FlyCam.cpp  FlyCam.h  FlyingCameraControls.cpp  FlyingCameraControls.h  FontTextBuffer.cpp  FontTextBuffer.h  ForwardFramebuffer.cpp  ForwardFramebuffer.h  FramebufferBase.cpp  FramebufferBase.h  FreeCameraScript.cpp  FreeCameraScript.h  FrustumBase.cpp  FrustumBase.h  FrustumProjectionParameters.h  GLContext.cpp  GLContext.h  GfxHeader.h  GpuComputeSync.cpp  GpuComputeSync.h  GpuQuad3.cpp  GpuQuad3.h  GraphicsApi.cpp  GraphicsApi.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsWindow.cpp  GraphicsWindow.h  Gui2d.h  HappySky.cpp  HappySky.h  (+87 more)
src/math/: Algorithm.cpp  Algorithm.h  BitHacks.cpp  BitHacks.h  Box2x.cpp  Box2x.h  Box3x.cpp  Box3x.h  BoxUtils.cpp  BoxUtils.h  CollisionEquations.cpp  CollisionEquations.h  ConvexAlgorithms.cpp  ConvexAlgorithms.h  CubicBezierSpline.cpp  CubicBezierSpline.h  Line3.cpp  Line3.h  MathAll.h  MathHeader.h  MathUtils.cpp  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Minimax.cpp  Minimax.h  Plane3.cpp  Plane3.h  PlaneEx3.cpp  PlaneEx3.h  ProjectedRay.cpp  ProjectedRay.h  Quad3x.cpp  Quad3x.h  QuadPlane.cpp  QuadPlane.h  Quaternion.cpp  Quaternion.h  Random.cpp  (+16 more)
src/mltest/: MLTest.cpp
src/model/: Animation.cpp  Animation.h  ArmatureSpec.cpp  ArmatureSpec.h  BaseNode.cpp  BaseNode.h  DataBlock.cpp  DataBlock.h  FragmentBufferData.cpp  FragmentBufferData.h  GpuBufferData.cpp  GpuBufferData.h  HierarchyString.h  IboData.cpp  IboData.h  IndexBufferData.cpp  IndexBufferData.h  Material.cpp  Material.h  MbiFile.cpp  MbiFile.h  MeshCache.cpp  MeshCache.h  MeshComponent.cpp  MeshComponent.h  MeshData.cpp  MeshData.h  MeshNode.cpp  MeshNode.h  MeshSpec.cpp  MeshSpec.h  MeshSpecHierarchy.cpp  MeshSpecHierarchy.h  MeshUtils.cpp  MeshUtils.h  MobFile.cpp  MobFile.h  ModFile.cpp  ModFile.h  Model.cpp  (+47 more)
src/net/: ClientSocket.cpp  ClientSocket.h  DBAdmin.cpp  DBAdmin.h  DBHeader.h  DBManager.cpp  DBManager.h  DBMySql.cpp  DBMySql.h  Database.h  NetClient.cpp  NetClient.h  NetHeader.h  NetIncludes.h  NetServer.cpp  NetServer.h  NetworkInfo.cpp  NetworkInfo.h  NetworkManager.cpp  NetworkManager.h  NetworkObject.cpp  NetworkObject.h  NetworkUtils.cpp  NetworkUtils.h  NetworkWorker.cpp  NetworkWorker.h  NonBlockingSocket.cpp  NonBlockingSocket.h  Packet.cpp  Packet.h  PacketMakerBase.cpp  PacketMakerBase.h  Serializable.cpp  Serializable.h  ServerSocket.cpp  ServerSocket.h  SqlTest.cpp  SqlTest.h  VirtualClient.cpp  VirtualClient.h  (+2 more)
src/ui/: Gui2d.cpp  Gui2d.h  UIHeader.cpp  UIHeader.h  UIImage.cpp  UIImage.h  UILabel.cpp  UILabel.h
src/world/: BaseCollider.cpp  BaseCollider.h  BlockNode.cpp  BlockNode.h  BottleUtils.cpp  BottleUtils.h  CSharpScript.cpp  Component.cpp  (+63 more)
(+198 files in other folders)
